<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".MoodActivity">

    <TextView
        android:id="@+id/homeTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:alpha="1"
        android:fontFamily="@font/poppinsextrabold"
        android:text="@string/mentalhealth_label"
        android:textColor="@color/accentColor"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/barchart_container"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeTopic">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <View
                android:id="@+id/divider4"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="22dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mood3_image" />

            <View
                android:id="@+id/divider6"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="22dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mood4_icon" />

            <View
                android:id="@+id/divider3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="22dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mood2_image" />

            <TextView
                android:id="@+id/moodTopic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/moodTopic"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <RadioGroup
                android:id="@+id/moodGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/mood1_image"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/moodTopic">


                <RadioButton
                    android:id="@+id/mood1_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="12dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/moodTopic" />

                <RadioButton
                    android:id="@+id/mood2_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="12dp"
                    app:layout_constraintStart_toEndOf="@+id/moodGroup"
                    app:layout_constraintTop_toBottomOf="@+id/mood1_checkbox" />


                <RadioButton
                    android:id="@+id/mood3_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="12dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mood2_checkbox" />


                <RadioButton
                    android:id="@+id/mood4_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mood3_checkbox" />


                <RadioButton
                    android:id="@+id/mood5_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="12dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mood4_checkbox" />


            </RadioGroup>


            <TextView
                android:id="@+id/mood1_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/mood1_text"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/mood1_image"
                app:layout_constraintTop_toBottomOf="@+id/moodTopic" />


            <TextView
                android:id="@+id/mood2_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/mood2_text"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/mood2_image"
                app:layout_constraintTop_toBottomOf="@+id/divider2" />


            <TextView
                android:id="@+id/mood3_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/mood3_text"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/mood3_image"
                app:layout_constraintTop_toBottomOf="@+id/divider3" />

            <TextView
                android:id="@+id/mood4_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/mood4_text"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/mood4_icon"
                app:layout_constraintTop_toBottomOf="@+id/divider4" />

            <TextView
                android:id="@+id/mood5_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/mood5_text"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/mood5_icon"
                app:layout_constraintTop_toBottomOf="@+id/divider6" />

            <ImageView
                android:id="@+id/mood1_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="23dp"
                app:layout_constraintStart_toEndOf="@+id/moodGroup"
                app:layout_constraintTop_toBottomOf="@+id/moodTopic"
                app:srcCompat="@drawable/awesome_icon" />

            <ImageView
                android:id="@+id/mood2_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toEndOf="@+id/moodGroup"
                app:layout_constraintTop_toBottomOf="@+id/divider2"
                app:srcCompat="@drawable/good_icon" />


            <ImageView
                android:id="@+id/mood3_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toEndOf="@+id/moodGroup"
                app:layout_constraintTop_toBottomOf="@+id/divider3"
                app:srcCompat="@drawable/fine_icon" />

            <ImageView
                android:id="@+id/mood4_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toEndOf="@+id/moodGroup"
                app:layout_constraintTop_toBottomOf="@+id/divider4"
                app:srcCompat="@drawable/bad_icon" />


            <ImageView
                android:id="@+id/mood5_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/moodGroup"
                app:layout_constraintTop_toBottomOf="@+id/divider6"
                app:srcCompat="@drawable/terrible_icon" />

            <View
                android:id="@+id/divider2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="22dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mood1_image" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>


    <include
        android:id="@+id/include"
        layout="@layout/navbar_layout" />

    <Button
        android:id="@+id/saveMoodBtn"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/accentColor"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/saveMoodBtn"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>